Fixed maven build