@@ -100,6 +100,19 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-surefire-plugin</artifactId>
+			  <version>2.22.2</version>
+			  
+			  <configuration>
+			    <forkCount>1</forkCount>
+			    <reuseForks>true</reuseForks>
+			    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+			  </configuration>
+			</plugin>
 		</plugins>
+		
 	</build>
 </project>
